--- a/100 Podcast Episodes.html
+++ b/100 Podcast Episodes.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link href="One Section/Podcast Episodes/style.css" rel="stylesheet">
+    <link href="Podcast Episodes/style.css" rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
