--- a/Art and Photography.html
+++ b/Art and Photography.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link href="Two Sections/Art and Photography/style.css" rel="stylesheet">
+    <link href="Art and Photography/style.css" rel="stylesheet">
 </head>
 
 <body>
